--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@
 
 								<header id="header">
 									<h1><a href="index.html" id="logo">Sunwoo Kim</a></h1>
-									<nav id="nav">
+									<!--<nav id="nav">
 										<a href="index.html" class="current-page-item">Homepage</a>
 										<a href="publications.html">Publications</a>
-										<!-- 
 										<a href="cv.html">CV</a>
                                         <a href="twocolumn1.html">Two Column #1</a>
 										<a href="onecolumn.html">One Column</a>
 										<a href="threecolumn.html">Three Column</a>
-                                        -->
 									</nav>
+                                        -->
 								</header>
 
 							</div>
