--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-        <!--
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        -->
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -89,8 +87,16 @@
 							</div>
 							<div class="col-8 col-12-medium imp-medium">
 								<section>
-									<h2>About me</h2>
-                                PhD candidate in Intelligent Systems Engineering track in School of Informatics, Computing, and Engineering at Indiana University Bloomington. I investigate efficient machine learning and deep learning solutions for audio processing problems with my advisor Prof. Minje Kim. My current research focuses on novel modes of compression for source separation applications through personalization and scalable learning for practical deployment onto resource-constrained devices.
+									<h2>About</h2>
+                                PhD candidate in Intelligent Systems Engineering track in School of Informatics, Computing, and Engineering at Indiana University Bloomington. I investigate efficient machine learning and deep learning solutions for audio processing problems with my advisor Prof. Minje Kim. My current research focuses on novel modes of compression for source separation applications through personalization and scalable learning for practical deployment onto resource-constrained devices. Previously, I worked on various modes of compression including extreme quantization, hashing, and pruning. 
+                                
+                                I was fortunate enough to work as an applied scientist intern at Amazon Lab126's Audio Technology group and as an engineering intern at Qualcomm's Audio Algorithms group. 
+
+                                I graduated with a BS in Physics from the University of Illinois at Urbana-Champaign. 
+
+                                Please check out my <a href="New_CV_922.pdf"  class="button">CV</a> for more information. 
+
+                                In my leisure time, I mostly spend time with my two dogs, Mochi and Oliver, by going to nearby parks or nature trails. I also enjoy watching soccer, and I recently got into playing tennis.
                                 </section>
 
 								<section>
